terraform-aws-eks/10-aws-eks-lb-externaldns/01-kubernetes-manifests/04-ALB-Ingress-SSL-Redirect-ExternalDNS.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-externaldns-demo
    annotations:
        # Load Balancer Name
        alb.ingress.kubernetes.io/load-balancer-name: externaldns-ingress
        # Ingress Core Settings
        #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
        alb.ingress.kubernetes.io/scheme: internet-facing
        # Health Check Settings
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-port: traffic-port
        #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/success-codes: "200"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
        ## SSL Settings
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/0d86500a-08b3-4f17-8fb4-f09532ba0522
        #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)
        # SSL Redirect Setting
        alb.ingress.kubernetes.io/ssl-redirect: "443"
        # External DNS - For creating a Record Set in Route53
        external-dns.alpha.kubernetes.io/hostname: dnstest901.stacksimplify.com, dnstest902.stacksimplify.com
spec:
    ingressClassName: my-aws-ingress-class # Ingress Class
    defaultBackend:
        service:
            name: app3-nginx-nodeport-service
            port:
                number: 80
    rules:
        - http:
              paths:
                  - path: /app1
                    pathType: Prefix
                    backend:
                        service:
                            name: app1-nginx-nodeport-service
                            port:
                                number: 80
                  - path: /app2
                    pathType: Prefix
                    backend:
                        service:
                            name: app2-nginx-nodeport-service
                            port:
                                number: 80
# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.

# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
